--- a/MileStone 01/Module 05/practice_01/style.css
+++ b/MileStone 01/Module 05/practice_01/style.css
@@ -98,7 +98,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 2px 2px 2px black;
+    box-shadow: 3px 2px 5px black;
 }
 .inside_plane_section{
     margin-top: 1.5rem;
@@ -122,4 +122,41 @@
 }
 .inner_plan_div p,h3{
     margin-top: 0.5rem;
+}
+
+/* mindset_section styles */
+.parent_mindset{
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.mindset_section{
+    height: 30vh;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    /* border: 2px solid red; */
+    margin: 0.7rem auto;
+
+    background-image:url('./images/gradient3.png'), url('./images/watch.png') ;
+}
+.mindset_section button{
+    width: 8vw;
+    height: 2rem;
+    text-align: center;
+    color: #F15B22;
+    margin-left: 2.3rem;
+    border: 0;
+    font-size: 1rem;
+    padding-left: 0.8rem;
+    border-radius: 6px;
+}
+.mindset_section h1{
+    color: white;
+}
+.mindset_section h1{
+    padding-left: 2.3rem;
 }
